	this one is defined. If it is, sychronization is done.

	soap/sympasoap.pm, src/Commands.pm, src/List.pm, wwsympa/wwsympa.fcgi: removes "sync_include" task when a synchronization 
	is triggered by another event than task processing.
	Review actions on list using includes trigger a user's list synchronization.

   Changes :

	check_perl_modules.pl: [reported by S.Hornburg] remove unuseful dependency for Crypt::OpenSSL::X50 perl module. It was
	introduced in revision 3754.

	soap/sympasoap.pm, src/List.pm, src/Upgrade.pm, src/etc/script/arc2webarc.pl, src/etc/script/mod2html.pl,
	src/etc/script/p12topem.pl, src/sympa.pl, src/task_manager.pl, wwsympa/archived.pl, wwsympa/bounced.pl, wwsympa/wwsympa.fcgi:
	Now set List::use_db in Upgrade::Probe_db() and List::check_db_connect() to prevent "Sympa not setup for DBI" errors.

	check_perl_modules.pl: Sympa requires Perl 5.8 (for encoding features)

	src/task_manager.pl: check the $end variable before processing each task, thus making a kill -TERM more quickly
	processed

	src/Log.pm, subst.pl: optimizations to save most calls to do_log()

	src/List.pm: optimizations to lower the List::new() calls and perform locks on list config files only if reloading is
	required

   Bug fixes :

	wwsympa/wwslib.pm: [#2931][A.GAVARA, INPL Nancy] CAS authentication would fail because http was used instead of https.
	Fixed get_my_url() to use HTTPS environment variable instead of SSL_PROTOCOL and SSL_PROTOCOL_VERSION.

	src/task_manager.pl: [#3142][submitted by Y. BLUSSEAU] A typo made the stop() command fail to remove tasks.

	soap/sympasoap.pm: [Reported by P. David, univ. Strasbourg] In some very rare occurences, the session identifier would be
	constituted of decimal numbers only AND start with at least one "0" (zero) character. In this case, this string was considered a
	number by sympasoap.pm and the zero removed, thus shortening - and invalidating - the id. This would prevent the user from being